--- a/src/styles/hello.css
+++ b/src/styles/hello.css
@@ -25,12 +25,186 @@
         overflow-y: scroll;
     }
 
+    .stock-wr {
+        margin: 20px 20px 50px 20px;
+        display: grid;
+        gap: 30px;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    }
+
+    .stock-item {
+        border-radius: 6px;
+        background-color: white;
+        padding: 20px;
+    }
+
+    .item-t {
+        font-family: 'sfb';
+        text-align: start;
+        font-size: 16px;
+        color: #42516d;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .orderr {
+        margin-top: 20px;
+        background-color: #1d9bf0;
+        color: white;
+        padding: 12px;
+        border-radius: 6px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: 'sfb';
+        font-size: 16px;
+        cursor: pointer;
+    }
+
+    .specs {
+        color: #1d9bf0;
+        font-family: 'sfr';
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .cost {
+        color: #1d9bf0;
+        font-family: 'sfr';
+        font-size: 16px;
+    }
+
+    .i-desc {
+        font-family: 'sfr';
+        margin-top: 12px;
+        color: #42516d;
+    }
+
+    .pic {
+        margin-top: 20px;
+        border-radius: 3px;
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    }
+
+    .contact-wr {
+        display: none;
+        opacity: 0;
+        justify-content: center;
+        align-items: center;
+        z-index: 200;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: #42516da6;
+    }
+
+    .contactt {
+        display: none;
+        opacity: 0;
+        background-color: #1d9bf0;
+        border-radius: 6px;
+        padding: 20px 20px 10px 20px;
+        width: 100%;
+        z-index: 500;
+        margin: 30px;
+    }
+
+    .close-btn-wr {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba(255, 255, 255, 0.103);
+        margin-top: 30px;
+        cursor: pointer;
+        transition: 0.5s ease;
+    }
+
+    .close-btn-wr:hover {
+        background-color: white;
+    }
+
+    .close-btn-wr:hover .close-btn {
+        color: #1d9bf0;
+    }
+
+    .close-btn {
+        color: white;
+        font-family: 'sfr';
+        padding: 10px 30px 10px 30px;
+        font-size: 16px;
+    }
+
+    .about-wr {
+        display: none;
+        justify-content: center;
+        align-items: center;
+        z-index: 100;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: #42516da6;
+        opacity: 0;
+    }
+
+    .about-about {
+        color: white;
+        font-family: 'sfr';
+        font-size: 18px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        text-align: center;
+    }
+
+    .aboutt {
+        background-color: #1d9bf0;
+        border-radius: 10px;
+        padding: 20px 20px 20px 20px;
+        z-index: 500;
+        margin: 20px;
+        height: fit-content;
+        width: 300px;
+        bottom: 0;
+        display: none;
+        opacity: 0;
+    }
+
     .content-title-wr {
         margin-top: 105px;
     }
 
     .h-subtitle {
         display: none;
+    }
+
+    .task-btn {
+        display: none;
+    }
+
+    .tasks-title-wr {
+        display: flex; 
+        justify-content: center; 
+        align-items: center; 
+        width: 100%; 
+        margin-bottom: 40px;
+    }
+
+    .tasks-title {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: 'coco';
+        font-size: 26px;
+        color: #1d9bf0;
+        border-bottom: 3px dashed #1d9bf0;
+        width: fit-content;
+        padding-bottom: 10px;
     }
 
     .account {
@@ -81,7 +255,7 @@
         font-family: 'sfr';
         text-align: center;
         font-size: 18px;
-        margin: 20px 20px 0px 20px;
+        margin: 20px 20px 60px 20px;
         /* border: 2px solid #42516d10; */
         padding: 20px 20px 20px 20px;
         border-radius: 16px;
@@ -218,7 +392,7 @@
         font-size: 16px;
         padding: 20px;
         width: 100%;
-        border-radius: 14px;
+        border-radius: 6px;
     }
 
     .btn-wr {
@@ -246,6 +420,24 @@
         background-color: rgba(0, 0, 0, 0.274);
         display: none;
         opacity: 0;
+    }
+
+    .contact {
+        transform: translate(0px, 300px);
+        opacity: 0;
+        display: none;
+        margin: 5px;
+        position: fixed;
+        height: fit-content;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        border-radius: 22px;
+        z-index: 500;
+        background-color: #1d9bf0;
+        padding: 20px;
+        --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+        box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
     }
 
     .drawer {
@@ -308,6 +500,71 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        color: white;
+        font-family: 'coco';
+        gap: 8px;
+    }
+
+    .contact-card {
+        background-color: white;
+        border-radius: 6px;
+        padding: 50px 30px 50px 30px;
+        --tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+        box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);	
+    }
+
+    .news {
+        background-color: #f4f6f8;
+        border-radius: 50px;
+        padding: 10px 10px 10px 15px;
+        display: flex;
+        justify-content: center;
+        gap: 2px;
+        align-items: center;
+        width: fit-content;
+    }
+
+    .newsletter {
+        outline: none;
+        border: none;
+        background-color: #f4f6f8;
+        color: #42516d;
+        font-size: 16px;
+    }
+
+    .n-title {
+        color: #42516d;
+        font-size: 24px;
+        font-family: 'sfb';
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .n-subtitle {
+        color: #42516d;
+        font-size: 16px;
+        font-family: 'sfr';
+        text-align: center;
+        margin-bottom: 30px;
+    }
+
+    .send-btn {
+        outline: none;
+        border: none;
+        background-color: #1d9bf0;
+        padding: 8px;
+        border-radius: 50px;
+        height: 25px;
+        width: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    .send-icon {
+        fill: white;
+        height: 18px;
     }
 
     .d-icon {
@@ -323,7 +580,7 @@
         top: 0;
         left: 0;
         right: 0;
-        padding: 30px 74px 30px 74px;
+        padding: 20px 74px 20px 74px;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -331,6 +588,160 @@
         background-color: #f4f6fa;
         /* backdrop-filter: blur( 200.0px );
         -webkit-backdrop-filter: blur( 100.0px ); */
+    }
+
+    .stock-wr {
+        margin: 20px 74px 50px 74px;
+        display: grid;
+        gap: 30px;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    }
+
+    .stock-item {
+        border-radius: 6px;
+        background-color: white;
+        padding: 20px;
+    }
+
+    .item-t {
+        font-family: 'sfb';
+        text-align: start;
+        font-size: 20px;
+        color: #42516d;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .orderr {
+        margin-top: 30px;
+        background-color: #1d9bf0;
+        color: white;
+        padding: 12px;
+        border-radius: 6px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: 'sfb';
+        font-size: 16px;
+        cursor: pointer;
+    }
+
+    .specs {
+        color: #1d9bf0;
+        font-family: 'sfr';
+        text-align: center;
+        margin-top: 20px;
+        font-size: 16px;
+    }
+
+    .cost {
+        color: #1d9bf0;
+        font-family: 'sfr';
+        font-size: 16px;
+    }
+
+    .i-desc {
+        font-family: 'sfr';
+        margin-top: 20px;
+        color: #42516d;
+        font-size: 16px;
+    }
+
+    .pic {
+        margin-top: 20px;
+        border-radius: 3px;
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    }
+
+    .contact-wr {
+        display: none;
+        justify-content: center;
+        align-items: center;
+        /* z-index: 100; */
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: #42516da6;
+        opacity: 0;
+    }
+
+    .contactt {
+        background-color: #1d9bf0;
+        border-radius: 10px;
+        padding: 50px 100px 50px 100px;
+        width: fit-content;
+        z-index: 500;
+        margin: 30px;
+        height: fit-content;
+        bottom: 0;
+        display: none;
+        opacity: 0;
+    }
+
+    .about-wr {
+        display: none;
+        justify-content: center;
+        align-items: center;
+        z-index: 100;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: #42516da6;
+        opacity: 0;
+    }
+
+    .about-about {
+        color: white;
+        font-family: 'sfr';
+        font-size: 20px;
+        margin-top: 40px;
+        margin-bottom: 30px;
+        text-align: center;
+    }
+
+    .aboutt {
+        background-color: #1d9bf0;
+        border-radius: 10px;
+        padding: 50px 100px 50px 100px;
+        z-index: 500;
+        margin: 30px;
+        height: fit-content;
+        width: 300px;
+        bottom: 0;
+        display: none;
+        opacity: 0;
+    }
+
+    .close-btn-wr {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba(255, 255, 255, 0.103);
+        margin-top: 30px;
+        cursor: pointer;
+        transition: 0.5s ease;
+    }
+
+    .close-btn-wr:hover {
+        background-color: white;
+    }
+
+    .close-btn-wr:hover .close-btn {
+        color: #1d9bf0;
+    }
+
+    .close-btn {
+        color: white;
+        font-family: 'sfr';
+        padding: 10px 30px 10px 30px;
+        font-size: 16px;
     }
 
     .store-f-wr {
@@ -343,12 +754,34 @@
         font-family: 'sfr';
         text-align: center;
         font-size: 20px;
-        margin: 30px 60px 0px 60px;
+        margin: 80px 60px 80px 60px;
         width: fit-content;
         /* border: 2px solid #42516d10; */
-        padding: 20px 20px 20px 20px;
+        padding: 40px 100px 40px 100px;
         border-radius: 16px;
-        background-color: transparent;
+        background-color: #ecf3f6;
+    }
+
+    .tasks-title-wr {
+        background-color: #ebf0f3;
+        display: flex; 
+        justify-content: center; 
+        align-items: center; 
+        width: 100%; 
+        margin-bottom: 0px;
+        padding: 100px 0px 0px 0px;
+    }
+
+    .tasks-title {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: 'coco';
+        font-size: 35px;
+        color: #1d9bf0;
+        border-bottom: 3px dashed #1d9bf0;
+        width: fit-content;
+        padding-bottom: 20px;
     }
 
     .quote {
@@ -373,7 +806,7 @@
     .content-wr {
         padding: 20px 60px 10px 60px;
         position: relative;
-        margin-top: 10px;
+        margin-top: 40px;
         display: flex;
         justify-content: flex-start;
         align-items: center;
@@ -400,7 +833,7 @@
         font-family: 'coco';
         font-size: 40px;
         /* color: #1d9bf0; */
-        color: #42516d;
+        color: #585f6b;
     }
 
     .h-subtitle {
@@ -450,7 +883,8 @@
         font-family: 'sfb';
         font-size: 16px;
         border: none;
-        border-radius: 12px;
+        border-radius: 6px;
+        cursor: pointer;
     }
 
     .aboutus {
@@ -479,7 +913,9 @@
     }
 
     .tasks-wrapper {
-        margin: 80px 60px 20px 60px;
+        padding: 80px 0px 0px 0px;
+        background-color: #ebf0f3;
+        margin: 0px 0px 0px 0px;
         display: grid;
         justify-content: center;
         grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
@@ -490,12 +926,38 @@
         justify-content: flex-start;
         align-items: center;
         gap: 20px;
-        margin-bottom: 90px;
+        margin-bottom: 130px;
+    }
+
+    .tasks-btn-wr {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
+    .task-btn {
+        background-color: transparent;
+        font-family: 'sfb';
+        border: 2px solid #1d9bf0;
+        outline: none;
+        border-radius: 6px;
+        color: #1d9bf0;
+        padding: 10px 30px 10px 30px;
+        margin-top: 50px;
+        cursor: pointer;
+        display: block;
+        transition: 0.9s ease;
+    }
+
+    .task-btn:hover {
+        background-color: #1d9bf0;
+        color: white;
     }
 
     .task-icon-container {
         border-radius: 20px;
-        background-color: #ebf0f3;
+        background-color: #f4f5fa;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -524,12 +986,11 @@
     }
 
     .task-subtitle {
-        margin-top: 5px;
+        margin-top: 20px;
         text-align: center;
         color: #42516d;
         font-family: 'sfr';
-        font-size: 16px;
-        margin-top: 10px;
+        font-size: 18px;
     }
 
     .talk-btn {
@@ -542,13 +1003,79 @@
         font-size: 18px;
         padding: 15px 60px 15px 60px;
         width: fit-content;
-        border-radius: 12px;
+        border-radius: 6px;
         cursor: pointer;
     }
 
     .btn-wr {
-        padding: 20px;
-        margin-bottom: 30px;
+        padding: 20px 30px 120px 30px;
+        margin-bottom: 0px;
+        background-color: #ebf0f3;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contact-card {
+        background-color: white;
+        border-radius: 6px;
+        width: fit-content;
+        padding: 50px 100px 50px 100px;
+        --tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+        box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);	
+    }
+
+    .news {
+        background-color: #f4f6f8;
+        border-radius: 50px;
+        padding: 10px 10px 10px 25px;
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+        align-items: center;
+        width: fit-content;
+    }
+
+    .newsletter {
+        outline: none;
+        border: none;
+        background-color: #f4f6f8;
+        color: #42516d;
+    }
+
+    .n-title {
+        color: #42516d;
+        font-size: 28px;
+        font-family: 'sfb';
+        text-align: center;
+        margin-bottom: 15px;
+    }
+
+    .n-subtitle {
+        color: #42516d;
+        font-size: 16px;
+        font-family: 'sfr';
+        text-align: center;
+        margin-bottom: 40px;
+    }
+
+    .send-btn {
+        outline: none;
+        border: none;
+        background-color: #1d9bf0;
+        padding: 8px;
+        border-radius: 50px;
+        height: 25px;
+        width: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    .send-icon {
+        fill: white;
+        height: 18px;
     }
 
     .learn {
@@ -643,6 +1170,9 @@
         justify-content: center;
         align-items: center;
         transition: 0.5s ease;
+        color: white;
+        gap: 8px;
+        font-family: 'coco';
     }
 
     .d-icon {
